[build-system]
requires = ["setuptools >= 69.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meds_etl"
dynamic = ["version"]
description = "A data standard for working with event stream data"
readme = "README.md"
license = {text = "Apache-2.0"}

dependencies = [
    "pyarrow >= 8",
    "polars >= 0.20.10",
    "jsonschema >= 4.0.0",
    "meds == 0.1.3",
    "typing_extensions >= 4.0",
    "datasets >= 2.0.0",
    "tqdm >= 4.6.0",
    "psutil >= 5.9.0"
]

[project.optional-dependencies]
duckdb = [
    "duckdb >= 0.10.1"
]
cpp = [
    "meds_etl_cpp == 0.1.2"
]


[project.scripts]
meds_etl_mimic = "meds_etl.mimic:main"
meds_etl_omop = "meds_etl.omop:main"
meds_etl_from_flat = "meds_etl.flat:convert_flat_to_meds_main"
meds_etl_to_flat = "meds_etl.flat:convert_meds_to_flat_main"

[tool.setuptools_scm]
version_file = "src/meds_etl/_version.py"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line_length = 120
target_version = ['py310']
